WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170984
Non-muxable GPUs shouldn't allow offline rendering
https://bugs.webkit.org/show_bug.cgi?id=170984
Summary
Non-muxable GPUs shouldn't allow offline rendering
Dean Jackson
Reported
2017-04-19 01:35:41 PDT
Non-muxable GPUs shouldn't allow offline rendering
Attachments
Patch
(1.84 KB, patch)
2017-04-19 01:38 PDT
,
Dean Jackson
mmaxfield
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2017-04-19 01:36:16 PDT
<
rdar://problem/31614406
>
Dean Jackson
Comment 2
2017-04-19 01:38:59 PDT
Created
attachment 307474
[details]
Patch
Dean Jackson
Comment 3
2017-04-19 01:41:42 PDT
Committed
r215506
: <
http://trac.webkit.org/changeset/215506
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug